--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@types/supertest": "^2.0.7",
     "commitizen": "^3.1.1",
     "concurrently": "^4.1.0",
+    "dotenv": "^8.0.0",
     "husky": "^2.3.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
+    "sonarqube-build-breaker": "^0.1.0",
     "standard-version": "^6.0.1",
     "supertest": "^3.4.1",
     "ts-jest": "24.0.2",
