--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "reflect-metadata": "^0.1.12",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
   },
@@ -44,6 +46,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "@types/request-promise": "^4.1.44",
     "@types/supertest": "^2.0.7",
     "commitizen": "^3.1.1",
     "concurrently": "^4.1.0",
