chore(testes): testes

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ CHIBATA_DB_USER=admin
 CHIBATA_DB_PASSWORD=admin123
 CHIBATA_SLACK_WEB_HOOK=hook
 CHIBATA_SLACK_CHANNEL=canal
+CHIBATA_SLACK_BOT_TOKEN="token grandão aqui"
 
 PORT=3000
